# tauri-vite-templete

./: .prettierignore  .prettierrc.yaml  README.md  install-tauri-plug.sh  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: app_commands.rs
src/components/: app-layout.tsx  app-sidebar.tsx  locales-toggle.tsx  mode-toggle.tsx
src/components/ui/: sidebar.tsx  slider.tsx  sonner.tsx
src/i18n/: index.tsx
src/i18n/locales/: en.json  zh.json
src/pages/: home.tsx  settings.tsx
