[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"
tauri-plugin-shell = "2"
tauri-plugin-sql = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-fs-pro = "2.4.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["full"] }
serde_yaml = "0.9.34"
once_cell = "1.21.3"
chrono = "0.4.41"
lazy_static = "1.5.0"
regex = "1.11.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
